--- a/css/sobre.css
+++ b/css/sobre.css
@@ -13,11 +13,11 @@
     width: 8.6rem;
     height: 9rem;
     border-radius: 50%;
-    border: 2px solid #fff;  
+    border: 4px solid #fff;  
     
 }
 .sobre-imgtext{
-    min-width: 200px;
+    min-width: 15rem;
     width: 30%;
     background-color: #303035;
     display: flex;
@@ -49,9 +49,50 @@
     margin-top: 2rem;
     overflow: scroll;
     width: 35rem;
-    height: 20rem;
+    height: 28.7rem;
     color: white;
     padding: 2rem;
     border-radius: 15px;
     overflow-x: hidden;
+}
+.text-img-box{
+    display: flex;
+    flex-flow: column;
+    color: white;
+    margin-bottom: 2rem;
+}
+.text-img-box p{
+    margin-bottom: 1rem;
+}
+.text-img-box li{
+    display: flex;
+    align-items: center;
+    font-weight: 700;
+    padding-block: 1rem;
+}
+.text-img-box img{
+    width: 32px;
+    height: 32px;
+    margin-right: 20px;
+}
+.icons-img-box{
+    margin-bottom: 10px;
+}
+.icons-img-box a{
+    margin-left: 10px;
+}
+.text-box ul{
+    list-style-type: none;
+}
+.sobre-header{
+    border-bottom: 1px solid #303035;
+}
+
+/* Estilização Scroll Bar */
+::-webkit-scrollbar{
+    width: 6px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #33303D;
+    border-radius: 5px;
 }
