--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,3 +1,6 @@
+#about{
+    height: 100vw;
+}
 .sobre-box{
     width: 90%;
     height: 100%;
@@ -19,11 +22,13 @@
 .sobre-imgtext{
     min-width: 15rem;
     width: 30%;
+    height: 25%;
+    min-height: 30rem;
     background-color: #303035;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2rem;
+    margin-top: 5rem;
     margin-bottom: 2rem;
     margin-left: 2rem;
     border-radius: 0.8rem;
@@ -37,19 +42,21 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
 }
-.conteudo header{
-    margin-top: 40px;
-    font-size: 30px;
-    color: #E1E1E6;
+.sobre-header{
+    padding-top: 7rem;
+    font-size: 5rem;
+    display: flex;
+    color: #45166a;
     font-weight: bold;
     background-color: #0E0E10;
 }
 .text-box{
     box-shadow: rgb(50 50 93 / 25%) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset;
-    margin-top: 2rem;
+    margin-top: 5rem;
     overflow: scroll;
     width: 35rem;
-    height: 29.4rem;
+    height: 30%;
+    min-height: 30%;
     color: white;
     padding: 2rem;
     border-radius: 15px;
@@ -105,6 +112,6 @@
     width: 6px;
 }
 ::-webkit-scrollbar-thumb{
-    background-color: #33303D;
+    background-color: #45166A;
     border-radius: 5px;
 }
