--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,11 @@ header{
     background-color: #18181B;
     width: 100%;
     height: 4rem;
-    position: static;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    box-shadow: 10px 0 5px black;
 }
 img{
     height: 44px;
