--- a/css/home-page.css
+++ b/css/home-page.css
@@ -1,16 +1,20 @@
 #home{
     width: 100%;
-    background-color: aliceblue;
     height: 100vh;
+    /*background-color: #1a1a1e;*/
+    background: rgb(131,58,180);
+background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 55%, rgba(252,176,69,1) 100%);
+    padding-bottom: 10rem;
 }
 .home-page h1{
-    color: #45166a;
+    color: #ffffff;
     padding-top: 15rem;
     text-align: center;
     font-size: 3rem;
+    text-shadow: -28px 0px 32px black;
 }
 .home-page h2{
-    color: #222222;
+    color: #dadada;
     padding-top: 1rem;
     text-align: center;
     font-size: 1.5rem;
@@ -20,9 +24,28 @@
     margin-top: 5rem;
 }
 .home-img img{
-    width: 20%;
+    width: 10vw;
     height: 20%;
     display: flex;
+    margin: 0px auto;
+}
+.homebackground img{
     margin: 0 auto;
-    
+    width: 100%;
+    height: 161px;
+}
+/* LAYOUTS RESPONSIVO */
+@media (max-width: 768px) {
+   
+}
+@media (max-width: 470px) {
+    #home{
+        padding-bottom: 3rem;
+    }
+   .home-img img{
+    width: 150px;
+   }
+   .home-page h1{
+    padding-top: 7rem;
+   }
 }
