--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,5 +1,9 @@
 #about{
-    height: 100vw;
+    height: 100%;
+    /*box-shadow: 0 0 1px black;*/
+    padding-bottom: 5rem;
+    /*background-color: #171717;*/
+    background-color: #f5f5f5;
 }
 .sobre-box{
     width: 90%;
@@ -41,23 +45,29 @@
 .text-box h1{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
+    color: #8907fc;
 }
 .sobre-header{
     padding-top: 7rem;
-    font-size: 5rem;
-    display: flex;
-    color: #45166a;
-    font-weight: bold;
-    background-color: #0E0E10;
+    padding-top: 2rem;
+    text-align: left;
+    color: #555456;
+    font-size: 3rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 500;
+}
+.sobre-header h1{
+    margin-top: 2rem;
 }
 .text-box{
-    box-shadow: rgb(50 50 93 / 25%) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset;
+    /*box-shadow: rgb(50 50 93 / 25%) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset;*/
+    box-shadow: 0 2.8px 2.2px rgb(0 0 0 / 3%), 0 6.7px 5.3px rgb(0 0 0 / 5%), 0 12.5px 10px rgb(0 0 0 / 6%), 0 22.3px 17.9px rgb(0 0 0 / 7%), 0 -1rem 33.4px rgb(0 0 0 / 9%), 0 100px 80px rgb(0 0 0 / 12%);
     margin-top: 5rem;
     overflow: scroll;
     width: 35rem;
-    height: 30%;
+    height: 30vw;
     min-height: 30%;
-    color: white;
+    color: rgb(41, 41, 41);
     padding: 2rem;
     border-radius: 15px;
     overflow-x: hidden;
@@ -104,14 +114,20 @@
     list-style-type: none;
 }
 .sobre-header{
-    border-bottom: 1px solid #303035;
+    /*border-bottom: 1px solid #303035;*/
 }
-
+.text-box::-webkit-scrollbar{
+    width: 6px;
+}
+.text-box::-webkit-scrollbar-thumb{
+    background-color: #646363;
+    border-radius: 5px;
+}
 /* Estilização Scroll Bar */
 ::-webkit-scrollbar{
     width: 6px;
 }
 ::-webkit-scrollbar-thumb{
-    background-color: #45166A;
+    background-color: #8907fc;
     border-radius: 5px;
 }
