--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@ body{
     background-color:#0E0E10;
 }
 header{
-    background-color: #18181B;
+    background-color: #f5f5f5;
     width: 100%;
     height: 4rem;
     position: fixed;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    box-shadow: 10px 0 5px black;
+    box-shadow: 0 0 3px rgb(61, 61, 61);
 }
 img{
     height: 44px;
@@ -43,36 +43,35 @@ header ul{
 .menu li a{
     text-decoration: none;
     list-style: none;
-    color: #a7a7a7;
+    color: #444444;
 }
 .menu ul li{
     padding-right: 3rem;
 }
 .menu .botton:hover{
-    color: white;
-    background-color: #18181B;
-    border-bottom: 3px solid #45166A;
+    color: #222222;
+    border-bottom: 3px solid #8907fc;
     padding-bottom: 19px;
 }
 .menu .home-botton{
-    color: white;
+    color: #222222;
     font-weight: bold;
 }
 .menu .home-botton:hover{
-    color: white;
-    border-bottom: 3px solid #45166A;
+    color: rgb(184, 184, 184);
+    border-bottom: 3px solid #8907fc;
     padding-bottom: 19px;
 }
 .menu .contato-botton{
     color: #d8d8d8;
-    background-color: #45166A;
+    background-color: #8907fc;
     border-radius: 10px;
     padding: 15px 40px 15px;
     font-weight: bold;
 }
 .menu .contato-botton:hover{
     background-color: #636363;
-    color: #141414;
+    color: #ffffff;
     border-bottom: none;
     padding-bottom: none;
 }
@@ -81,6 +80,8 @@ footer {
     padding: 10px;
     text-align: center;
     color: #ffffff;
+    height: 20rem;
+    box-shadow: 10px 0 5px black;
   }
 
 /* LAYOUTS RESPONSIVO */
