--- a/css/hardskills.css
+++ b/css/hardskills.css
@@ -1,9 +1,12 @@
-#soft{
-    background-color: white;
+#hard{
     width: 100%;
+    background-color: rgb(255, 255, 255);
     padding-bottom: 5rem;
 }
-.softheader h1{
+#hard .conteudo{
+    width: min(80rem, 100%);
+}
+.hardheader h1{
     text-align: left;
     padding-top: 2rem;
     color: #555456;
@@ -12,7 +15,7 @@
     font-family:'Open Sans', sans-serif;
     font-weight: 500;
 }
-.softheader h2{
+.hardheader h2{
     text-align: left;
     padding-top: 1rem;
     color: rgb(85, 85, 85);
@@ -20,12 +23,29 @@
     font-family:'Open Sans', sans-serif;
     font-weight: 400;
 }
-.softskills {
+.hardimage img{
+    width: 100%;
+    height: 100%;
+    padding: 2px;
+    margin-top: 3rem;
+    /*border-radius: 19px;
+    box-shadow: 0px 1px 8px black;*/
+}
+.hardimage{
+    width: 90%;
     display: flex;
+    justify-content: right;
+}
+.hardskills{
     justify-content: center;
     padding-top: 2rem;
+    width: 100%;
 }
-.softskills div{
+.hardbox{
+    display: flex;
+    flex-flow: row-reverse;
+}
+.hard-icons {
     background-color: #f5f5f5;
     display: flex;
     margin: 1rem;
@@ -35,7 +55,7 @@
     flex-flow: column;
     padding: 1.4rem;
 }
-.softskills h1{
+.hard-icons h1{
     text-align: left;
     margin-bottom: 20px;
     color: #8907fc;
@@ -43,26 +63,14 @@
     font-weight: 500;
     font-size: 20px;
 }
-.softskills p{
+.hard-icons p{
     color: #8c95b2;
     font-family:'Open Sans', sans-serif;
     font-weight: 500;
     text-align: left;
 }
-.soft-icons img{
+.hard-icons img{
     width: 40px;
     height: 40px;
     margin-bottom: 1rem;
-}
-
-/* LAYOUTS RESPONSIVO */
-@media (max-width: 768px) {
-    .softskills div {
-        padding: 0.4rem;
-    }
-}
-@media (max-width: 470px) {
-    .softskills{
-        flex-flow: column;
-    }
 }
