--- a/css/home-page.css
+++ b/css/home-page.css
@@ -21,7 +21,7 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 55%,
 }
 .home-img{
     width: 100%;
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 .home-img img{
     width: 10vw;
@@ -34,6 +34,49 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 55%,
     width: 100%;
     height: 161px;
 }
+/* WAVES TOP */
+.custom-shape-divider-top-1662580313 {
+    position: absolute;
+    top: 4rem;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1662580313 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 152px;
+}
+
+.custom-shape-divider-top-1662580313 .shape-fill {
+    fill: #F5F5F5;
+}
+/* WAVES bottom */ 
+
+.custom-shape-divider-bottom-1662580995 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1662580995 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 87px;
+}
+
+.custom-shape-divider-bottom-1662580995 .shape-fill {
+    fill: #F5F5F5;
+}
+
 /* LAYOUTS RESPONSIVO */
 @media (max-width: 768px) {
    
