--- a/css/sobre.css
+++ b/css/sobre.css
@@ -48,12 +48,12 @@
     color: #8907fc;
 }
 .sobre-header{
-    padding-top: 7rem;
-    padding-top: 2rem;
     text-align: left;
+    padding-top: 2rem;
     color: #555456;
     font-size: 3rem;
-    font-family: 'Open Sans', sans-serif;
+    text-shadow: 0px 0px 1px black;
+    font-family:'Open Sans', sans-serif;
     font-weight: 500;
 }
 .sobre-header h1{
@@ -64,7 +64,7 @@
     box-shadow: 0 2.8px 2.2px rgb(0 0 0 / 3%), 0 6.7px 5.3px rgb(0 0 0 / 5%), 0 12.5px 10px rgb(0 0 0 / 6%), 0 22.3px 17.9px rgb(0 0 0 / 7%), 0 -1rem 33.4px rgb(0 0 0 / 9%), 0 100px 80px rgb(0 0 0 / 12%);
     margin-top: 5rem;
     overflow: scroll;
-    width: 35rem;
+    width: 60%;
     height: 30vw;
     min-height: 30%;
     color: rgb(41, 41, 41);
@@ -112,9 +112,6 @@
 }
 .text-box ul{
     list-style-type: none;
-}
-.sobre-header{
-    /*border-bottom: 1px solid #303035;*/
 }
 .text-box::-webkit-scrollbar{
     width: 6px;
