--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
     background-color:#0E0E10;
 }
 header{
+    z-index: 1;
     background-color: #f5f5f5;
     width: 100%;
     height: 4rem;
@@ -15,7 +16,6 @@ header{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    box-shadow: 0 0 3px rgb(61, 61, 61);
 }
 img{
     height: 44px;
@@ -30,7 +30,7 @@ header ul{
     list-style: none;
 }
 .conteudo{
-    width: min(72rem, 100%);
+    width: min(80rem, 100%);
     margin-inline: auto;
     padding-inline: 3rem;
     height: 100%;
@@ -56,6 +56,8 @@ header ul{
 .menu .home-botton{
     color: #222222;
     font-weight: bold;
+    border-bottom: 3px solid #8907fc;
+    padding-bottom: 19px;
 }
 .menu .home-botton:hover{
     color: rgb(184, 184, 184);
