--- a/css/home-page.css
+++ b/css/home-page.css
@@ -1,9 +1,9 @@
 #home{
     width: 100%;
     height: 100vh;
-    /*background-color: #1a1a1e;*/
-    background: rgb(131,58,180);
-background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 55%, rgba(252,176,69,1) 100%);
+    background-color: #2a2a2c;
+    /*background: rgb(131,58,180);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 55%, rgba(252,176,69,1) 100%);*/
     padding-bottom: 10rem;
 }
 .home-page h1{
@@ -11,7 +11,10 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 55%,
     padding-top: 15rem;
     text-align: center;
     font-size: 4.68rem;
-    text-shadow: -28px 0px 32px black;
+    text-shadow: -28px 0px 32px rgb(0, 0, 0);
+}
+.home-page bold{
+    color: #8907fc;
 }
 .home-page h2{
     color: #dadada;
