--- a/css/sobre.css
+++ b/css/sobre.css
@@ -52,12 +52,25 @@
     padding-top: 2rem;
     color: #555456;
     font-size: 3rem;
-    text-shadow: 0px 0px 1px black;
     font-family:'Open Sans', sans-serif;
     font-weight: 500;
 }
 .sobre-header h1{
     margin-top: 2rem;
+    text-align: left;
+    color: rgb(85, 84, 86);
+    font-size: 3rem;
+    text-shadow: black 0px 0px 1px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+}
+.sobre-header h2{
+    text-align: left;
+    padding-top: 1rem;
+    color: rgb(85, 85, 85);
+    font-size: 1rem;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
 }
 .text-box{
     /*box-shadow: rgb(50 50 93 / 25%) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset;*/
