--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,9 @@ header ul{
 }
 footer {
     background-color: #18181B;
-    padding: 10px;
+    padding: 5rem;
     text-align: center;
     color: #ffffff;
-    height: 20rem;
     box-shadow: 10px 0 5px black;
   }
 
