--- a/css/cursos.css
+++ b/css/cursos.css
@@ -39,3 +39,24 @@
     font-family:'Open Sans', sans-serif;
     font-weight: 500;
 }
+@media (max-width: 1024px){
+    .project-area img {
+        margin-top: 5rem;
+    }
+    .project-area2 img {
+        margin-top: 5rem;
+    }
+    .project-area3 img {
+        margin-top: 5rem;
+    }
+}
+@media (max-width: 768px) {
+    .curso-img img {
+        width: 75%;
+    }
+}
+@media (max-width: 500px) {
+    .curso-img img {
+        width: 90%;
+    }
+}
