--- a/css/hardskills.css
+++ b/css/hardskills.css
@@ -74,3 +74,15 @@
     height: 40px;
     margin-bottom: 1rem;
 }
+
+@media (max-width: 700px) {
+    .hardbox {
+        display: unset;
+    }
+    .hardimage {
+        width: 0;
+        height: 0px;
+        padding: 0;
+        margin-top: 0;
+    }
+}
