--- a/css/softskills.css
+++ b/css/softskills.css
@@ -61,8 +61,9 @@
         padding: 0.4rem;
     }
 }
-@media (max-width: 470px) {
+@media (max-width: 500px) {
     .softskills{
         flex-flow: column;
+        padding-top: 0.5rem;
     }
 }
