--- a/css/cursos.css
+++ b/css/cursos.css
@@ -1,6 +1,7 @@
 #cursos{
     width: 100%;
     background-color: white;
+    padding: 2rem;
 }
 .cursos-header h1{
     text-align: left;
@@ -32,13 +33,24 @@
 }
 .curso-text h1{
     text-align: center;
-    padding: 4rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     color: #555456;
     font-size: 1rem;
     text-shadow: 0px 0px 1px black;
     font-family:'Open Sans', sans-serif;
     font-weight: 500;
 }
+.button-area{
+    text-align: center;
+    margin-top: 1rem;
+}
+.next-btn{
+    margin-left: 3rem;
+}
+
+/* MEDIA QUERY */
+
 @media (max-width: 1024px){
     .project-area img {
         margin-top: 5rem;
